<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/g_logo"
            android:layout_marginTop="@dimen/_50dp"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="@dimen/_10dp"
            android:textColor="#D4AC0D"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textFontWeight="700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imglogo"/>

        <EditText
            android:id="@+id/edtname"
            android:layout_width="301dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/_15dp"
            android:hint="@string/your_name"
            android:inputType="text"
            android:textColor="#D4AC0D"
            android:textColorHint="#7E7E7E80"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup" />

        <EditText
            android:id="@+id/edtemail"
            android:layout_width="301dp"
            android:layout_height="45dp"
            android:layout_marginTop="28dp"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:textColor="#D4AC0D"
            android:textColorHint="#7E7E7E80"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtname" />

        <EditText
            android:id="@+id/edtcontact"
            android:layout_width="301dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:hint="@string/your_contact"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="#D4AC0D"
            android:textColorHint="#7E7E7E80"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtemail" />

        <EditText
            android:id="@+id/edtpass"
            android:layout_width="301dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:hint="@string/pswd"
            android:inputType="textPassword"
            android:textColor="#D4AC0D"
            android:textColorHint="#7E7E7E80"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtcontact" />

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/rounded10_yellow_bg"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingVertical="@dimen/_10dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtpass" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/already_a_customer_login"
            android:textAlignment="center"
            android:textColor="#D4AC0D"
            android:textSize="16sp"
            android:onClick="onClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>