<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imglogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/g_logo"
            android:layout_marginTop="@dimen/_50dp"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#D4AC0D"
            android:textFontWeight="700"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imglogo" />

        <EditText
            android:id="@+id/edtemail"
            android:layout_width="363dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:hint="@string/your_email"
            android:inputType="textWebEmailAddress"
            android:textColor="#D4AC0D"
            android:textColorHint="#7E646465"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login" />

        <EditText
            android:id="@+id/edtpass"
            android:layout_width="363dp"
            android:layout_height="48dp"
            android:layout_marginTop="56dp"
            android:hint="@string/pswd"
            android:inputType="textPassword"
            android:textColor="#D4AC0D"
            android:textColorHint="#7E545455"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtemail"
            app:layout_constraintTop_toBottomOf="@id/edtemail" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded10_yellow_bg"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingVertical="@dimen/_10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/edtpass"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtpass"
            app:layout_constraintTop_toBottomOf="@id/edtpass" />

        <TextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/new_to_grocery"
            android:textAlignment="center"
            android:textColor="#D4AC0D"
            android:textSize="16sp"
            android:onClick="onClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>